syntax = "proto3";

option java_package = "ru.yandex.practicum.grpc.stats.user";

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}