syntax = "proto3";

import "messages/UserPredictionsRequestProto.proto";
import "messages/RecommendedEventProto.proto";
import "messages/SimilarEventsRequestProto.proto";
import "messages/InteractionsCountRequestProto.proto";

option java_package = "ru.yandex.practicum.grpc.stats.recommendations";

service RecommendationsController {

  rpc GetRecommendationsForUser (UserPredictionsRequestProto) returns (stream RecommendedEventProto);

  rpc GetSimilarEvents (SimilarEventsRequestProto) returns (stream RecommendedEventProto);

  rpc GetInteractionsCount (InteractionsCountRequestProto) returns (stream RecommendedEventProto);

}